--- a/translations/en.json
+++ b/translations/en.json
@@ -123,7 +123,10 @@
     "blog": "Blog",
     "about": "About",
     "contact": "Contact",
-    "brand": "GDG on Campus UAM",
+    "brand": {
+      "desktop": "GDG on Campus UAM",
+      "mobile": "GDGoC UAM"
+    },
     "mainNav": "Main navigation",
     "login": "Login",
     "logout": "Logout",
