--- a/translations/es.json
+++ b/translations/es.json
@@ -123,7 +123,10 @@
     "blog": "Blog",
     "about": "Sobre nosotros",
     "contact": "Contacto",
-    "brand": "GDG on Campus UAM",
+    "brand": {
+      "desktop": "GDG on Campus UAM",
+      "mobile": "GDGoC UAM"
+    },
     "mainNav": "Navegación principal",
     "login": "Iniciar sesión",
     "logout": "Cerrar sesión",
