feat(certificates): Added OpenBadge support

--- a/translations/en.json
+++ b/translations/en.json
@@ -98,7 +98,8 @@
     "openWebsite": "Open Website",
     "openX": "Open X",
     "openGithub": "Open Github",
-    "openGdgCommunity": "Open GDG Community"
+    "openGdgCommunity": "Open GDG Community",
+    "addOpenBadge": "Add OpenBadge"
   },
   "globalError": {
     "title": "Something went wrong",
@@ -338,6 +339,7 @@
       "print": "Print",
       "share": "Share",
       "addToLinkedIn": "Add to LinkedIn",
+      "addOpenBadge": "Add OpenBadge",
       "download": "Download"
     },
     "verification": {
@@ -346,7 +348,15 @@
       "id": "Certificate ID"
     },
     "notFound": "Certificate not found",
-    "notFoundDescription": "The certificate you are looking for does not exist or has been removed."
+    "notFoundDescription": "The certificate you are looking for does not exist or has been removed.",
+    "exportModal": {
+      "title": "Add to your profile",
+      "openBadgePassport": "OpenBadge Passport",
+      "credly": "Credly",
+      "badgr": "Badgr",
+      "parchment": "Parchment",
+      "validate": "Validate Badge"
+    }
   },
   "footer": {
     "quickLinks": "Quick Links",
